refactor react component by modifying function & var names to better allow readability, refactor api to clean up styling in the csv module page & change name of controller to better follow rails naming conventions & apply last final styling touches to client

--- a/react-spa/src/App.css
+++ b/react-spa/src/App.css
@@ -34,3 +34,15 @@ td {
   text-align: left;
   width: auto;
 }
+
+table, th, td  {
+  border: 1px solid black;;
+}
+
+div {
+  text-align: left;
+}
+
+.Header {
+  text-align: center;
+}
